--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "softlibrary",
+  "name": "softlibrary-web",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -12,15 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.10",
-    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.2.10",
     "@angular/compiler": "~11.2.10",
     "@angular/core": "~11.2.10",
     "@angular/forms": "~11.2.10",
-    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "ng-zorro-antd": "11.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
