--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "softlibrary-web": {
+    "softlibrary-org": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/softlibrary-web",
+            "outputPath": "dist/softlibrary-org",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -73,18 +73,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "softlibrary-web:build"
+            "browserTarget": "softlibrary-org:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "softlibrary-web:build:production"
+              "browserTarget": "softlibrary-org:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "softlibrary-web:build"
+            "browserTarget": "softlibrary-org:build"
           }
         },
         "test": {
@@ -121,16 +121,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "softlibrary-web:serve"
+            "devServerTarget": "softlibrary-org:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "softlibrary-web:serve:production"
+              "devServerTarget": "softlibrary-org:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "softlibrary-web"
+  "defaultProject": "softlibrary-org"
 }
