--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: '16'
       - run: yarn install
-      - run: yarn run lint
+      - run: yarn run build
 
   scan:
     runs-on: ubuntu-latest
@@ -21,9 +21,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - run: |
-          yarn install
-          yarn run build
+      - run: yarn install
       - name: Security and Licence Scan
         uses: ShiftLeftSecurity/scan-action@v1.3.0
 
